[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/avoiding_coin.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 28, 27 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotating_coin"

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 37, 42.5 )

[node name="avoiding_coin" type="Area2D" groups=["coin"]]
position = Vector2( 19, 18 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 13, 14 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 28.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 14, 14 )
color = Color( 0.898039, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/rotating_coin = SubResource( 3 )

[node name="avoid_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="avoid_zone"]
position = Vector2( 13, 14.5 )
shape = SubResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_avoiding_coin_area_entered"]
[connection signal="area_entered" from="avoid_zone" to="." method="_on_avoid_zone_area_entered"]
[connection signal="area_exited" from="avoid_zone" to="." method="_on_avoid_zone_area_exited"]
